deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  namespace: web-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
        - name: my-web-app
          image: 084828580507.dkr.ecr.us-west-2.amazonaws.com/simple-web:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: my-web-app-svc
  namespace: web-app
spec:
  selector:
    app: my-web-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080 
  type: NodePort
